--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="usefulfile/stylesheets/style.css"/>
     
     <script data-main="js/main" src="libs/require.js"  type = "text/javascript" ></script>
+    <script type="text/javascript" src="cordova.js"></script>
 </head>
 <body>
 		<div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
