change page name

--- a/usefulfile/tpl/menu.html
+++ b/usefulfile/tpl/menu.html
@@ -127,7 +127,7 @@
 
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		  <ul class="nav navbar-nav navbar-left">
-				<li><a href="#park/checkIn">Home</a></li>
+				<li><a href="#park/home">Home</a></li>
 				<li><a href="#park/scan">check In/Out</a></li>
 				<li><a href="#park/searchPark">Search Park</a></li>
 				<li><a href="#record/myRecord">Record</a></li>
