checkIn?our function

--- a/usefulfile/tpl/park.html
+++ b/usefulfile/tpl/park.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="panel panel-black">
 			<div class="panel-heading">
-				<h3 class="panel-title"><%= App.user.getFirstName() %>' '<%= App.user.getLastName() %></h3>
+				<h3 class="panel-title"><%= App.user.getFirstName() + ' ' + App.user.getLastName() %></h3>
 			</div>
 			<div class="panel-body">
 				<form id="UserInfo" role="form" class="form-horizontal">
