--- a/usefulfile/tpl/park.html
+++ b/usefulfile/tpl/park.html
@@ -23,6 +23,7 @@
 				</form>
 			</div>
 		</div>
+		<button id="qrScanner" class = "btn col-md-12 col-xs-12 btn-success" width = "100%">Scan QR code</button>
 	</div>
 	<div id="nearestParkListRegion"></div>
 </script>
