--- a/usefulfile/tpl/record.html
+++ b/usefulfile/tpl/record.html
@@ -14,11 +14,13 @@
 									<option value="park" >Park</option>
 								</select>
 							</div>
-							<label class="col-md-1 col-xs-1 control-label" for="code">Code</label>
-							<div class="col-md-5 col-xs-5">
-								<input id="code" name="code" class="input-md form-control" type="text" value=""/>
+						</div>
+						<div class="form-group">
+							<label class="col-md-1 col-xs-2 control-label" for="code">Code</label>
+							<div class="col-md-5 col-xs-6">
+								<input id="code" name="code" class="input-md form-control inline" type="text" value=""/>
 							</div>
-							<div class="col-md-2 col-xs-2">
+							<div class="col-md-2 col-xs-4">
 								<button type="submit" class="btn btn-default btn-md user-submit pull-right">Check In</button>
 							</div>
 						</div>
