--- a/usefulfile/tpl/user.html
+++ b/usefulfile/tpl/user.html
@@ -317,7 +317,7 @@
 				</div>
 				<div>
 					<input type="password" placeholder="Password" required="" id="password" />
-					<i class="fa fa-eye passwordEye" style="display: inline;"></i>
+					<i class="fa fa-eye passwordEye" style="display: inline;" data-target="password"></i>
 				</div>
 				<div class="row">
 					<input type="submit" value="Log in"/>
