--- a/usefulfile/tpl/menu.html
+++ b/usefulfile/tpl/menu.html
@@ -46,6 +46,7 @@
 		  <ul class="nav navbar-nav navbar-left">
 				<li><a href="#user/cashForm">Deposit</a></li>
 				<li><a href="#record/forceCheckOut">Check Out</a></li>
+				<li><a href="#export/cashierExport">Summary</a></li>
 				<li><a href="#user/cashierProfile">Profile</a></li>
 				<li><a href="#user/changeEmailOrPassword">Change Email/Password</a></li>
 		  </ul>
@@ -73,6 +74,7 @@
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		  <ul class="nav navbar-nav navbar-left">
 				<li><a href="#park/myPark">My Park</a></li>
+				<li><a href="#export/ownerExport">Export</a></li>
 				<li><a href="#park/createPark">New Park</a></li>
 				<li><a href="#user/ownerProfile">Profile</a></li>
 				<li><a href="#user/changeEmailOrPassword">Change Email/Password</a></li>
@@ -127,7 +129,7 @@
 
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		  <ul class="nav navbar-nav navbar-left">
-				<li><a href="#park/home">Home</a></li>
+				<li><a href="#park/checkIn">check In/Out</a></li>
 				<li><a href="#park/searchPark">Search Park</a></li>
 				<li><a href="#record/myRecord">Record</a></li>
 				<li><a href="#report/newReport">Report</a></li>
