--- a/usefulfile/tpl/park.html
+++ b/usefulfile/tpl/park.html
@@ -233,7 +233,9 @@
 			<div>quantity: <%= obj.quantity%></div>
 		</div>
 		<div class = "col-md-4 col-xs-4">
-			<div><button class="btn btn-info edit table-btn-2">Edit</button></div><div><button class="btn btn-success reserve table-btn-2" value='reserve'>Reserve</button></div>
+			<div><button class="btn btn-info edit table-btn-2">Edit</button></div>
+			<div><button class="btn btn-success reserve table-btn-2">Reserve</button></div>
+			<div><button class="btn btn-success exportButton table-btn-2 hidden">Export</button></div>
 		</div>
 	</div>
 </script>
