--- a/usefulfile/tpl/report.html
+++ b/usefulfile/tpl/report.html
@@ -36,8 +36,10 @@
 					<fieldset>
 						<div class="form-group">
 							<label class="col-md-2 control-label" for="park">Park</label>
-							<div class="col-md-5">
-								<input id="park" name="park" class="form-control input-md" placeholder="Code" type="text" value="" />
+							<div class="col-md-10">
+								<input id="park" name="park" class="form-control input-md hidden" placeholder="Code" type="text" value="" />
+								<span class="qrResult"></span>
+								<button id="scanButton" name="scanButton" class="btn btn-success">Scan QR Code</button>
 							</div>
 						</div>
 						<div class="form-group">
