--- a/usefulfile/tpl/export.html
+++ b/usefulfile/tpl/export.html
@@ -10,6 +10,8 @@
 						<div class="form-group">
 						<span class="col-md-5 col-xs-5">
 							<select id="year" name="year" class="form-control">
+								<option value="2018">2018</option>
+								<option value="2017">2017</option>
 								<option selected="selected" value="2016">2016</option>
 								<option value="2015">2015</option>
 								<option value="2014">2014</option>
@@ -18,11 +20,11 @@
 						</span>
 						<span class="col-md-4 col-xs-4">
 							<select id="month" name="month" class="form-control">
-								<option selected="selected" value="01">Jan</option>
+								<option value="01">Jan</option>
 								<option value="02">Feb</option>
 								<option value="03">Mar</option>
 								<option value="04">Apr</option>
-								<option value="05">May</option>
+								<option selected="selected" value="05">May</option>
 								<option value="06">Jun</option>
 								<option value="07">Jul</option>
 								<option value="08">Aug</option>
@@ -32,7 +34,7 @@
 								<option value="12">Dec</option>
 							</select>
 						</span>
-						<span class="col-md-3 col-xs-3"><button class="btn btn-success exportButton" type="submit">Export</span>
+						<span class="col-md-3 col-xs-3"><button class="btn btn-success exportButton" type="submit">Export</button></span>
 						</div>
 						
 					</fieldset>
@@ -55,6 +57,8 @@
 						<span class="col-md-1 col-xs-1"></span>
 						<span class="col-md-5 col-xs-5">
 							<select id="year" name="year" class="form-control">
+								<option value="2018">2018</option>
+								<option value="2017">2017</option>
 								<option selected="selected" value="2016">2016</option>
 								<option value="2015">2015</option>
 								<option value="2014">2014</option>
@@ -63,11 +67,11 @@
 						</span>
 						<span class="col-md-5 col-xs-5">
 							<select id="month" name="month" class="form-control">
-								<option selected="selected" value="01">Jan</option>
+								<option value="01">Jan</option>
 								<option value="02">Feb</option>
 								<option value="03">Mar</option>
 								<option value="04">Apr</option>
-								<option value="05">May</option>
+								<option selected="selected" value="05">May</option>
 								<option value="06">Jun</option>
 								<option value="07">Jul</option>
 								<option value="08">Aug</option>
