--- a/usefulfile/tpl/menu.html
+++ b/usefulfile/tpl/menu.html
@@ -18,6 +18,7 @@
 				<li><a href="#user/createOwner">New Partner</a></li>
 				<li><a href="#user/createPolice">New Police</a></li>
 				<li><a href="#park/searchPark">Park</a></li>
+				<li><a href="#park/exportPark">Export Park</a></li>
 				<li><a href="#user/profile">Profile</a></li>
 				<li><a href="#user/changeEmailOrPassword">Change Email/Password</a></li>
 		  </ul>
