--- a/usefulfile/tpl/user.html
+++ b/usefulfile/tpl/user.html
@@ -339,6 +339,47 @@
 	</div>
 	<div id="OwnerRegion">
 	</div>
+	<div class="container">
+		<div class="panel panel-black">
+			<div class="panel-heading">
+				<h3 class="panel-title">Export Report</h3>
+			</div>
+			<div class="panel-body">
+				<form id="export" role="form" class="form-horizontal">
+					<fieldset>
+						<div class="form-group">
+						<span class="col-md-5 col-xs-5">
+							<select id="year" name="year" class="form-control">
+								<option value="2018">2018</option>
+								<option value="2017">2017</option>
+								<option selected="selected" value="2016">2016</option>
+								<option value="2015">2015</option>
+								<option value="2014">2014</option>
+								<option value="2013">2013</option>
+							</select>
+						</span>
+						<span class="col-md-4 col-xs-4">
+							<select id="month" name="month" class="form-control">
+								<option value="01">Jan</option>
+								<option value="02">Feb</option>
+								<option value="03">Mar</option>
+								<option value="04">Apr</option>
+								<option selected="selected" value="05">May</option>
+								<option value="06">Jun</option>
+								<option value="07">Jul</option>
+								<option value="08">Aug</option>
+								<option value="09">Sep</option>
+								<option value="10">Oct</option>
+								<option value="11">Nov</option>
+								<option value="12">Dec</option>
+							</select>
+						</span>
+						</div>
+					</fieldset>
+				</form>
+			</div>
+		</div>
+	</div>
 	<div id="cashierRegion">
 	</div>
 	<div id="policeRegion">
