--- a/usefulfile/tpl/user.html
+++ b/usefulfile/tpl/user.html
@@ -326,8 +326,9 @@
 				</div>
 				<div>
 					<a href="#registerUser" class="col-sm-4 col-md-4">Register User</a>
+					<span class="col-sm-4 col-md-4" ><span>
 					<a href="#forgotPassword" class="col-sm-4 col-md-4">Forgot password?</a>
-					<a href="#user/registerCarParkOwner" class="col-sm-4 col-md-4">Join us</a>
+					
 				</div>
 			</form>
 		</section>
